# bokeh

./: .appveyor.yml  .bettercodehub.yml  .binstar.yml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  .vale.ini  BIRDNOTE.txt  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Data.csv  Dockerfile-py2  FUNDING.yml  LICENSE.txt  MAINTAINERS  MANIFEST.in  PRO  QUICKSTART.md  Quad.html  README.md  TestFileOutput.html  VBar.html  _setup_helpers.py  _setup_support.py  banded_color_bar.coffee  bokeh-cli  bokeh-server  bokeh.enc  bokeh_graphs.py  boxplot_multi.html  brewer.html  build.py  (+66 more)
bokehjs/: .bowerrc  .eslintcache  .eslintrc.js  .gitignore  .istanbul.yml  .npmignore  BIRDNOTE.txt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gruntfile.coffee  LICENSE  README.md  bower.json  diff.txt  eslint.js  eslint.json  gulpfile.js  index.html  npm-shrinkwrap.json  package-lock.json  package.json  prepare.js  render.js  test_2dto2d.html  test_2dtogl.html  test_bokehjs.py  test_glto2d.html  tsconfig.json  tslint.json  typings.json  webpack.config.js
bokehjs/.cargo/: config.toml
bokehjs/demo/: annular_wedge_demo.html  annular_wedge_one_file.html  annulus.html  arc.html  asterisk_demo.html  candlestick.html  categorical.html  column_select.html  date_demo.html  glyph_demo.html  glyphs.html  gmap.html  grid_plot.html  grouped_bars.html  hover.html  image.html  layout.html  lorenz.html  map_label.html  map_overlay.html  rects.html  remote_data_select.html  scatter.html  stacked_bars.html  vector.html
bokehjs/demo/coffee/: annular_wedge_demo.coffee  annular_wedge_one_file.coffee  annulus.coffee  arc.coffee  asterisk_demo.coffee  candlestick.coffee  categorical.coffee  column_select.coffee  date_demo.coffee  geojs.coffee  glyph_demo.coffee  glyphs.coffee  gmap.coffee  grid_plot.coffee  grouped_bars.coffee  hover.coffee  image.coffee  layout.coffee  lorenz.coffee  map_label.coffee  map_overlay.coffee  rects.coffee  remote_data_select.coffee  scatter.coffee  stacked_bars.coffee  vector.coffee
bokehjs/demo/spectrogram/: .gitignore  README.md  soundserver.py  soundserver_threaded.py  spectrogram.html
bokehjs/docs/: base.html  bower.json  container.html  glyphs.coffee  mapper.html  schema_renderers.html  style_guide.coffee  table.html  testutils.html
bokehjs/docs/html/: index.html
bokehjs/examples/: .gitignore  bokehjs.d.ts  examples.yaml  tsconfig.json
bokehjs/examples/anscombe/: .gitignore  .npmignore  anscombe.html  anscombe.ts  tsconfig.json
bokehjs/examples/burtin/: .gitignore  .npmignore  burtin.html  burtin.ts  tsconfig.json
bokehjs/examples/categorical/: .gitignore  .npmignore  categorical.html  categorical.ts  tsconfig.json
bokehjs/examples/charts/: .gitignore  .npmignore  charts.html  charts.ts  tsconfig.json
bokehjs/examples/donut/: .gitignore  .npmignore  donut.html  donut.ts  tsconfig.json
bokehjs/examples/electron/: README.md  index.html  main.js  package.json  renderer.js
bokehjs/examples/hierarchical/: .gitignore  .npmignore  hierarchical.html  hierarchical.ts  tsconfig.json
bokehjs/examples/hover/: .gitignore  .npmignore  hover.html  hover.ts  tsconfig.json
bokehjs/examples/legends/: .gitignore  .npmignore  legends.html  legends.ts  tsconfig.json
bokehjs/examples/linked/: .gitignore  .npmignore  linked.html  linked.ts  tsconfig.json
bokehjs/examples/stocks/: .gitignore  .npmignore  stocks.html  stocks.ts  tsconfig.json
bokehjs/examples/tap/: .gitignore  .npmignore  tap.html  tap.ts  tsconfig.json
bokehjs/gulp/: eco.coffee  graph.d.ts  index.coffee  index.js  index.ts  labeler.coffee  labeler.ts  linker.ts  paths.coffee  paths.ts  prelude.ts  task.ts  tsconfig.json  umd.ts  utils.coffee  utils.ts
bokehjs/gulp/tasks/: build.coffee  build.ts  clean.coffee  clean.ts  compiler.ts  default.coffee  default.ts  defaults.coffee  defaults.ts  develop.coffee  examples.coffee  examples.ts  generate_defaults.py  help.ts  index.coffee  index.ts  install.coffee  install.ts  lint.coffee  lint.ts  phosphor.coffee  scripts.coffee  scripts.coffee.orig  scripts.ts  styles.coffee  styles.coffee.orig  styles.ts  test.coffee  test.ts  typings.coffee  watch.coffee  watch.ts
bokehjs/make/: bindgen.sh  compiler.ts  fs.ts  index.js  linker.ts  main.ts  package.json  paths.ts  prelude.ts  strip_source_map.sh  task.ts  transform.ts  tsconfig.json
bokehjs/make/tasks/: _util.ts  all.ts  build.ts  clean.ts  compiler.ts  default.ts  defaults.ts  examples.ts  generate_defaults.py  index.ts  install.ts  lint.ts  pack.ts  scripts.ts  server.ts  styles.ts  test.ts  watch.ts
bokehjs/node/: package.json  render.js
bokehjs/patches/: slickgrid+2.3.23.patch
bokehjs/qunit-test/: source_test.html
bokehjs/qunit-test/source/: column_data_source.coffee
bokehjs/release/: bokeh.js
bokehjs/release/css/: bokeh-vendor.css  bokeh-vendor.min.css  bokeh.css  bokeh.min.css  continuum.css  flexbox.css  main.css  overrides.css  pivot.css  widgets.css
bokehjs/release/js/: bokeh.js  bokeh.min.js  config.js  main.js  workbench.js
bokehjs/src/coffee/: api.coffee  api.ts  base.coffee  base.ts  client.coffee  config.coffee  document.coffee  document.ts  embed.coffee  embed.ts  events.coffee  index.coffee  index.ts  jquery-private.coffee  main.coffee  main.ts  model.coffee  model.ts  node.d.ts  node_main.coffee  polyfill.ts  safely.coffee  safely.ts  tsconfig.json  version.coffee  version.ts
bokehjs/test/: .gitignore  all.coffee  client.coffee  common_test.html  defaults.coffee  defaults.ts  defer.ts  devtools.ts  document.coffee  external.d.ts  framework.d.ts  framework.ts  globals.d.ts  helpers.d.ts  index.coffee  index.ts  integration.html  integration.ts  interactive.ts  mapper_test.html  model.coffee  model.ts  package.json  path-browserify.d.ts  path.ts  playwright.config.ts  range_test.html  setup.ts  size.coffee  size.ts  stubs.ts  test_bokehjs.py  tsconfig.json  unit.coffee  unit.ts  util.ts  utils.coffee  utils.ts
bokehjs/ts-node/: index.js  register.js
bokehrs/bokeh-web/: Cargo.toml
(+12787 files in other folders)
