[workspace]
members = ["./src/wasm/bokeh-lib", "./src/wasm/bokeh-web"]

[workspace.package]
version = "3.1.0"
edition = "2021"
license = "BSD-3 (https://opensource.org/license/bsd-3-clause/)"
repository = "https://github.com/bokeh/bokeh"

[workspace.dependencies]
bokeh-lib = {path = "./src/wasm/bokeh-lib/", version = "*"}

[profile.release]
lto = true
opt-level = "s"
