[package]
name = "bokeh-lib"
description = ""
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}

[lib]
crate-type = ["lib"]

[dependencies]
ndarray = "0.15.6"
static_aabb2d_index = "1.0.0"

[dev-dependencies]
approx = {version = "0.5.1"}
